# projet_parfum

./: README.md  pyproject.toml
marionnaud_scrapper/: get_pages.py  main.py  parse_pages.py
scrapper/: Scrapper.py  etl.py  load.py  main.py  move.py  remote_db.py  scrapper.py  transform.py
scrapper/configs/: scrap_config.json  site_url.json
web_app/: app.py
