[tool.poetry]
name = "projet-parfum"
version = "0.1.0"
description = ""
authors = ["Mandresy ANDRIANTSOANAVALONA <13123849-mandresyandri@users.noreply.gitlab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.26.1"
pandas = "^2.2.3"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
