[tool.poetry]
name = "projet-parfum"
version = "0.1.0"
description = ""
authors = ["Mandresy ANDRIANTSOANAVALONA <13123849-mandresyandri@users.noreply.gitlab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.27.1"
pandas = "^2.2.3"
webdriver-manager = "^4.0.2"
beautifulsoup4 = "^4.12.3"
streamlit = "^1.40.2"
flask = "^3.1.0"
requests = "^2.32.3"
flask-cors = "^5.0.0"
st-mongo-connection = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
